Reload (also) about pages with the reload button

Another fantastic patch by Johannes Troscher

BUG:267748